--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -57,18 +57,18 @@
     }
 
     /* HEADER */
-  header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  background-color: rgba(232, 240, 232, 0.7); /* Reduzindo a opacidade para maior transparência */
-  backdrop-filter: blur(5px); /* Adiciona um leve desfoque para destacar o menu */
-  position: fixed; /* Fixa o menu no topo para efeito contínuo */
-  width: 100%; /* Garante que o menu ocupe a largura total */
-  z-index: 9999; /* Mantém o menu acima de outros elementos */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adiciona sombra para contraste */
-}
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 20px;
+      background-color: rgba(232, 240, 232, 0.7); /* Reduzindo a opacidade para maior transparência */
+      backdrop-filter: blur(5px); /* Adiciona um leve desfoque para destacar o menu */
+      position: fixed; /* Fixa o menu no topo para efeito contínuo */
+      width: 100%; /* Garante que o menu ocupe a largura total */
+      z-index: 9999; /* Mantém o menu acima de outros elementos */
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adiciona sombra para contraste */
+    }
 
     .menu-btn {
       display: none; /* só aparece no mobile */
@@ -260,24 +260,24 @@
     }
 
     /* ANIMAÇÕES - Slide In */
-.slide-in-left {
-  opacity: 0;
-  transform: translateX(-500px); /* Aumenta a intensidade da entrada */
-  transition: transform 0.3s ease-out, opacity 0.8s ease-out; /* Transição mais rápida */
-}
-.slide-in-left-active {
-  opacity: 1;
-  transform: translateX(0);
-}
-.slide-in-right {
-  opacity: 0;
-  transform: translateX(500px); /* Aumenta a intensidade da entrada */
-  transition: transform 0.8s ease-out, opacity 0.3s ease-out; /* Transição mais rápida */
-}
-.slide-in-right-active {
-  opacity: 1;
-  transform: translateX(0);
-}
+    .slide-in-left {
+      opacity: 0;
+      transform: translateX(-500px); /* Aumenta a intensidade da entrada */
+      transition: transform 0.3s ease-out, opacity 0.8s ease-out; /* Transição mais rápida */
+    }
+    .slide-in-left-active {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    .slide-in-right {
+      opacity: 0;
+      transform: translateX(500px); /* Aumenta a intensidade da entrada */
+      transition: transform 0.8s ease-out, opacity 0.3s ease-out; /* Transição mais rápida */
+    }
+    .slide-in-right-active {
+      opacity: 1;
+      transform: translateX(0);
+    }
 
     .sobre-nos-content {
       display: flex;
@@ -965,7 +965,7 @@
         />
       </div>
       <div id="circle">
-        <!-- 7 minicírculos -->
+        <!-- 1 -->
         <div
           class="min-circle"
           data-img="imagens/img1.png"
@@ -979,6 +979,7 @@
           <img src="imagens/img1.png" alt="HIS Learning Center" />
         </div>
 
+        <!-- 2 -->
         <div
           class="min-circle"
           data-img="imagens/img3.png"
@@ -992,6 +993,7 @@
           <img src="imagens/img3.png" alt="Healing Hands" />
         </div>
 
+        <!-- 3 -->
         <div
           class="min-circle"
           data-img="imagens/img2.png"
@@ -1005,6 +1007,7 @@
           <img src="imagens/img2.png" alt="Blessing Table" />
         </div>
 
+        <!-- 4 -->
         <div
           class="min-circle"
           data-img="imagens/img6.png"
@@ -1018,6 +1021,7 @@
           <img src="imagens/img6.png" alt="Seeds of Wisdom" />
         </div>
 
+        <!-- 5 -->
         <div
           class="min-circle"
           data-img="imagens/img5.png"
@@ -1031,6 +1035,7 @@
           <img src="imagens/img5.png" alt="Shiloh’s Home" />
         </div>
 
+        <!-- 6 -->
         <div
           class="min-circle"
           data-img="imagens/img4.png"
@@ -1044,6 +1049,7 @@
           <img src="imagens/img4.png" alt="Hannah’s Church Planting" />
         </div>
 
+        <!-- 7 -->
         <div
           class="min-circle"
           data-img="imagens/img7.png"
@@ -1056,31 +1062,89 @@
         >
           <img src="imagens/img7.png" alt="Harvesting Faith" />
         </div>
+
+        <!-- 8 - NOVO PROJETO: CURSO DE INGLÊS HANNAH -->
+        <div
+          class="min-circle"
+          data-img="imagens/img8.gif"
+          data-title="Curso de Inglês Hannah"
+          data-title-pt="Curso de Inglês Hannah"
+          data-title-en="Hannah English Course"
+          data-text='Imagine um aplicativo que ensina inglês de forma divertida e interativa, perfeitamente alinhado ao CEFR, compartilhando valores cristãos e aprofundando o conhecimento bíblico. Esse é o Curso de Inglês Hannah—um programa gamificado com histórias da Bíblia, músicas, vídeos e a assistência de IA do “Samuel the Robot”. Cada aula é única e envolvente, onde a protagonista Hannah guia crianças, jovens e adultos em uma aventura linguística que vai muito além de gramática: cada lição se torna um encontro transformador com a Palavra de Deus.'
+          data-text-pt='Imagine um aplicativo que ensina inglês de forma divertida e interativa, perfeitamente alinhado ao CEFR, compartilhando valores cristãos e aprofundando o conhecimento bíblico. Esse é o Curso de Inglês Hannah—um programa gamificado com histórias da Bíblia, músicas, vídeos e a assistência de IA do “Samuel the Robot”. Cada aula é única e envolvente, onde a protagonista Hannah guia crianças, jovens e adultos em uma aventura linguística que vai muito além de gramática: cada lição se torna um encontro transformador com a Palavra de Deus.'
+          data-text-en='Imagine an app that teaches English in a fun and interactive way, perfectly aligned with the CEFR (Common European Framework of Reference for Languages), while also sharing Christian values and deepening biblical knowledge. This is the Hannah English Course—a gamified program featuring Bible stories, music, videos, and the powerful AI assistance of “Samuel the Robot,” ensuring each lesson is unique and captivating. Our protagonist, Hannah, guides children, youth, and even adults through a linguistic adventure that goes far beyond grammar and vocabulary: every Bible passage and lesson becomes a life-changing encounter with God’s Word.'
+        >
+          <img src="imagens/img8.png" alt="Curso de Inglês Hannah" />
+        </div>
       </div>
     </div>
 
     <div class="project-list">
       <ul>
-        <li id="li-projeto1" data-title="HIS Learning Center" data-title-pt="Centro de Aprendizado HIS" data-title-en="HIS Learning Center">
+        <li
+          id="li-projeto1"
+          data-title="HIS Learning Center"
+          data-title-pt="Centro de Aprendizado HIS"
+          data-title-en="HIS Learning Center"
+        >
           Centro de Aprendizado HIS
         </li>
-        <li id="li-projeto2" data-title="Healing Hands" data-title-pt="Mãos que Curam" data-title-en="Healing Hands">
+        <li
+          id="li-projeto2"
+          data-title="Healing Hands"
+          data-title-pt="Mãos que Curam"
+          data-title-en="Healing Hands"
+        >
           Mãos que Curam
         </li>
-        <li id="li-projeto3" data-title="Blessing Table" data-title-pt="Mesa de Bênçãos" data-title-en="Blessing Table">
+        <li
+          id="li-projeto3"
+          data-title="Blessing Table"
+          data-title-pt="Mesa de Bênçãos"
+          data-title-en="Blessing Table"
+        >
           Mesa de Bênçãos
         </li>
-        <li id="li-projeto4" data-title="Seeds of Wisdom" data-title-pt="Sementes de Sabedoria" data-title-en="Seeds of Wisdom">
+        <li
+          id="li-projeto4"
+          data-title="Seeds of Wisdom"
+          data-title-pt="Sementes de Sabedoria"
+          data-title-en="Seeds of Wisdom"
+        >
           Sementes de Sabedoria
         </li>
-        <li id="li-projeto5" data-title="Shiloh’s Home" data-title-pt="Lar de Siló" data-title-en="Shiloh’s Home">
+        <li
+          id="li-projeto5"
+          data-title="Shiloh’s Home"
+          data-title-pt="Lar de Siló"
+          data-title-en="Shiloh’s Home"
+        >
           Lar de Siló
         </li>
-        <li id="li-projeto6" data-title="Hannah’s Church Planting" data-title-pt="Plantação de Igrejas de Hannah" data-title-en="Hannah’s Church Planting">
+        <li
+          id="li-projeto6"
+          data-title="Hannah’s Church Planting"
+          data-title-pt="Plantação de Igrejas de Hannah"
+          data-title-en="Hannah’s Church Planting"
+        >
           Plantação de Igrejas de Hannah
         </li>
-        <li id="li-projeto7" data-title="Harvesting Faith" data-title-pt="Colhendo Fé" data-title-en="Harvesting Faith">
+        <li
+          id="li-projeto7"
+          data-title="Harvesting Faith"
+          data-title-pt="Colhendo Fé"
+          data-title-en="Harvesting Faith"
+        >
           Colhendo Fé
+        </li>
+        <!-- NOVO PROJETO NA LISTA -->
+        <li
+          id="li-projeto8"
+          data-title="Curso de Inglês Hannah"
+          data-title-pt="Curso de Inglês Hannah"
+          data-title-en="Hannah English Course"
+        >
+          Curso de Inglês Hannah
         </li>
       </ul>
     </div>
@@ -1255,6 +1319,8 @@
       "li-projeto5": { pt: "Lar de Siló", en: "Shiloh’s Home" },
       "li-projeto6": { pt: "Plantação de Igrejas de Hannah", en: "Hannah’s Church Planting" },
       "li-projeto7": { pt: "Colhendo Fé", en: "Harvesting Faith" },
+      /* NOVO PROJETO 8 */
+      "li-projeto8": { pt: "Curso de Inglês Hannah", en: "Hannah English Course" },
 
       /* COMO AJUDAR */
       "como-ajudar-h2": { pt: "Como Ajudar", en: "How to Help" },
