--- a/Apresentacao/propaganda_port.html
+++ b/Apresentacao/propaganda_port.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn English with Biblical Stories</title>
+    <title>Aprenda Inglês com Histórias Bíblicas</title>
     <style>
-        body { 
+        body {
             background-image: url('../../../../../imagens/fundo.png');
             background-repeat: repeat;
             font-family: Arial, sans-serif;
@@ -16,7 +16,6 @@
             min-height: 100vh;
         }
 
-        /* BACK Button Styling */
         .back-button {
             background-color: #000;
             color: #fff;
@@ -34,7 +33,6 @@
             background-color: #333;
         }
 
-        /* Container Styling */
         .container {
             background-color: rgba(255, 255, 255, 0.8);
             padding: 30px;
@@ -45,21 +43,18 @@
             text-align: center;
         }
 
-        /* Title Styling */
         .container h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
             color: #333;
         }
 
-        /* Introductory Text Styling */
         .container p {
             font-size: 1.2em;
             margin-bottom: 30px;
             color: #555;
         }
 
-        /* Links Styling */
         .links a {
             display: block;
             background-color: rgba(0, 0, 0, 0.7);
@@ -76,17 +71,16 @@
             background-color: rgba(0, 0, 0, 0.9);
         }
 
-        /* Popup Styling */
         .popup {
-            display: none; 
-            position: fixed; 
-            z-index: 1000; 
+            display: none;
+            position: fixed;
+            z-index: 1000;
             left: 0;
             top: 0;
-            width: 100%; 
-            height: 100%; 
-            overflow: auto; 
-            background-color: rgba(0,0,0,0.5); 
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.5);
             justify-content: center;
             align-items: center;
         }
@@ -102,7 +96,12 @@
             animation: fadeIn 0.3s;
         }
 
-        /* Close Button Styling */
+        .popup-content img {
+            width: 100%;
+            margin-top: 15px;
+            border-radius: 10px;
+        }
+
         .close {
             position: absolute;
             top: 15px;
@@ -120,209 +119,140 @@
             text-decoration: none;
         }
 
-        /* Animation */
         @keyframes fadeIn {
             from {opacity: 0;}
             to {opacity: 1;}
         }
 
-        /* Responsive Design */
         @media (max-width: 600px) {
-            .container h1 {
-                font-size: 2em;
-            }
-
-            .container p {
-                font-size: 1em;
-            }
-
-            .links a {
-                font-size: 1em;
-                padding: 10px;
-            }
-
-            .popup-content {
-                width: 90%;
-            }
+            .container h1 { font-size: 2em; }
+            .container p { font-size: 1em; }
+            .links a { font-size: 1em; padding: 10px; }
+            .popup-content { width: 90%; }
         }
     </style>
 </head>
 <body>
-    <!-- BACK Button -->
-    <button class="back-button" onclick="goBack()">BACK</button>
-
-    <!-- Main Container -->
+    <button class="back-button" onclick="goBack()">VOLTAR</button>
     <div class="container">
-        <!-- Title -->
         <h1>Bem-vindo à Sua Jornada de Aprendizado em Inglês</h1>
-
-<!-- Texto Introdutório -->
-<p>
-    Mergulhe no mundo do aprendizado de inglês por meio de histórias bíblicas envolventes. Nossas ferramentas interativas, incluindo Conversação com IA, StoryCards, Flashcards, Jogos, Gramática e muito mais, foram projetadas para tornar sua experiência de aprendizado significativa e agradável. Explore cada seção para descobrir com é possível melhorar seu vocabulário, gramática, pronúncia e habilidades de conversação, tudo enquanto se conecta com narrativas bíblicas atemporais.
-</p>
-
-       <!-- Links to Topics -->
-<div class="links">
-    <a href="#" class="topic-link" data-popup="storycards-popup">StoryCards: Aprenda inglês com histórias bíblicas</a>
-    <a href="#" class="topic-link" data-popup="flashcards-popup">Flashcards: Reforce o vocabulário de forma interativa</a>
-    <a href="#" class="topic-link" data-popup="memorygame-popup">Memory Game: Melhore o vocabulário brincando</a>
-    <a href="#" class="topic-link" data-popup="wordsearch-popup">Word Search: Divirta-se com caça-palavras de vocabulário</a>
-    <a href="#" class="topic-link" data-popup="grammar-popup">Grammar: Domine o inglês no contexto</a>
-    <a href="#" class="topic-link" data-popup="quizzes-popup">Quizzes: Jogo de perguntas interativo com feedback imediato</a>
-    <a href="#" class="topic-link" data-popup="speak-popup">Speak Cards: Pratique sua pronúncia com avaliação instantânea</a>
-    <a href="#" class="topic-link" data-popup="hannahvideos-popup">HannahVideos: Aprendizado dinâmico por meio de vídeos</a>
-    <a href="#" class="topic-link" data-popup="lessons-popup">Exploring Biblical Lessons: Conecte lições bíblicas ao dia a dia</a>
-    <a href="#" class="topic-link" data-popup="spelling-tools-popup">Spelling Tools: Ferramentas para praticar escrita correta</a>
-    <a href="#" class="topic-link" data-popup="tests-popup">Tests: Avalie seu progresso com testes práticos</a>
-</div>
-    </div>
-
-   <!-- Pop-up Modals -->
-
-<!-- StoryCards Popup -->
-<div id="storycards-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>StoryCards: Aprenda inglês com histórias bíblicas</h2>
         <p>
-            StoryCards foram criados para ensinar inglês de forma significativa, utilizando histórias bíblicas que conectam gramática, vocabulário e compreensão textual. Cada história é cuidadosamente elaborada para abordar tópicos específicos de gramática e vocabulário, tornando o aprendizado envolvente e relevante.
+            Mergulhe no mundo do aprendizado de inglês por meio de histórias bíblicas envolventes. Nossas ferramentas interativas foram projetadas para tornar sua experiência significativa e agradável.
         </p>
+        <div class="links">
+            <a href="#" class="topic-link" data-popup="storycards-popup">StoryCards</a>
+            <a href="#" class="topic-link" data-popup="flashcards-popup">Flashcards</a>
+            <a href="#" class="topic-link" data-popup="memorygame-popup">Memory Game</a>
+            <a href="#" class="topic-link" data-popup="wordsearch-popup">Word Search</a>
+            <a href="#" class="topic-link" data-popup="grammar-popup">Grammar</a>
+            <a href="#" class="topic-link" data-popup="quizzes-popup">Quizzes</a>
+            <a href="#" class="topic-link" data-popup="speak-popup">Speak Cards</a>
+            <a href="#" class="topic-link" data-popup="hannahvideos-popup">HannahVideos</a>
+            <a href="#" class="topic-link" data-popup="lessons-popup">Lifes Lessons</a>
+            <a href="#" class="topic-link" data-popup="spelling-tools-popup">Spelling Tools</a>
+            <a href="#" class="topic-link" data-popup="tests-popup">Tests</a>
+        </div>
     </div>
-</div>
 
-<!-- Flashcards Popup -->
-<div id="flashcards-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Flashcards: Reforce o vocabulário de forma interativa</h2>
-        <p>
-            Flashcards reforçam o aprendizado de vocabulário por meio de meios dinâmicos e visuais. Cada cartão exibe uma imagem de um lado e a palavra correspondente do outro, facilitando a memorização e associação.
-        </p>
+    <!-- Popups com imagens corrigidas -->
+    <div id="storycards-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>StoryCards</h2>
+            <p>Aprenda inglês com histórias bíblicas...</p>
+            <img src="../imagens/botoes/storycards_button.png" alt="StoryCards">
+        </div>
     </div>
-</div>
-
-<!-- Memory Game Popup -->
-<div id="memorygame-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Memory Game: Melhore o vocabulário brincando</h2>
-        <p>
-            O Memory Game combina diversão e aprendizado, ajudando os alunos a reforçar o vocabulário e a memorização de palavras por meio de um formato interativo de jogo da memória.
-        </p>
+    <div id="flashcards-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Flashcards</h2>
+            <p>Reforce vocabulário com imagens e palavras...</p>
+            <img src="../imagens/botoes/flashcards_button.png" alt="Flashcards">
+        </div>
     </div>
-</div>
-
-<!-- Word Search Popup -->
-<div id="wordsearch-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Word Search: Divirta-se com caça-palavras</h2>
-        <p>
-            Atividades de caça-palavras melhoram o aprendizado de vocabulário, desafiando os alunos a encontrar e reconhecer palavras em uma grade, aprimorando a ortografia e o reconhecimento visual de palavras de forma divertida.
-        </p>
+    <div id="memorygame-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Memory Game</h2>
+            <p>Melhore vocabulário brincando...</p>
+            <img src="../imagens/botoes/memorygame_button.png" alt="Memory Game">
+        </div>
     </div>
-</div>
-
-<!-- Grammar Popup -->
-<div id="grammar-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Grammar: Domine o inglês no contexto</h2>
-        <p>
-            As lições de gramática são apresentadas de maneira contextualizada e prática, integrando-se ao vocabulário e às histórias para ajudar os alunos a entender e aplicar as regras gramaticais de forma eficaz.
-        </p>
+    <div id="wordsearch-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Word Search</h2>
+            <p>Caça-palavras de vocabulário...</p>
+            <img src="../imagens/botoes/wordsearch_button.png" alt="Word Search">
+        </div>
     </div>
-</div>
-
-<!-- Quizzes Popup -->
-<div id="quizzes-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Quizzes: Jogo de perguntas interativas</h2>
-        <p>
-            O que é: Um jogo de perguntas voltado para o conteúdo bíblico, linguístico e gramatical de cada lição, com feedback imediato sobre acertos e erros.
-            Por que é incrível: Promove uma competição saudável que motiva o aluno a revisar tudo o que aprendeu, tornando o processo de aprendizado mais dinâmico e engajador.
-        </p>
+    <div id="grammar-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Grammar</h2>
+            <p>Domine o inglês em contexto...</p>
+            <img src="../imagens/botoes/grammar_button.png" alt="Grammar">
+        </div>
     </div>
-</div>
-
-<!-- Speak Popup -->
-<div id="speak-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Speak Cards: Pratique a pronúncia de forma interativa</h2>
-        <p>
-            Speak Cards são cartões que mostram imagens e palavras que podem ser ouvidas pelo aluno. Em seguida, o aluno pronuncia a palavra do cartão, e o app avalia se a pronúncia está correta ou errada. Essa ferramenta ajuda a melhorar a confiança e a precisão na fala de maneira prática e divertida.
-        </p>
+    <div id="quizzes-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Quizzes</h2>
+            <p>Jogo de perguntas com feedback...</p>
+            <img src="../imagens/botoes/quiz_button.png" alt="Quizzes">
+        </div>
     </div>
-</div>
-
-<!-- HannahVideos Popup -->
-<div id="hannahvideos-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>HannahVideos: Aprenda com vídeos dinâmicos</h2>
-        <p>
-            HannahVideos são centrais para o curso, adaptadas para cada unidade para refletir temas bíblicos, conteúdo gramatical e vocabulário. Esses vídeos envolventes ajudam a reforçar o aprendizado por meio de meios visuais e auditivos.
-        </p>
+    <div id="speak-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Speak Cards</h2>
+            <p>Pratique pronúncia interativamente...</p>
+            <img src="../imagens/botoes/speak_button.png" alt="Speak Cards">
+        </div>
     </div>
-</div>
-
-<!-- Matching Game & Life Lessons Popup -->
-<div id="lessons-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Exploring Biblical Lessons: Conecte lições bíblicas à vida</h2>
-        <p>
-            Conecte lições bíblicas a situações reais por meio de Matching Games e atividades de Life Lessons, promovendo a reflexão e a aplicação prática dos valores aprendidos tanto no contexto linguístico quanto espiritual.
-        </p>
+    <div id="hannahvideos-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>HannahVideos</h2>
+            <p>Aprenda com vídeos dinâmicos...</p>
+            <img src="../imagens/botoes/video_button.png" alt="HannahVideos">
+        </div>
     </div>
-</div>
-
-<!-- Ferramentas de Ortografia Popup -->
-<div id="spelling-tools-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Spelling Tools: Praticando a escrita correta</h2>
-        <p>
-            <strong>1. Missing Words</strong><br>
-            O aluno vê uma imagem e deve escrever corretamente a palavra correspondente.<br>
-            Por que é incrível: Desenvolve a precisão ortográfica e incentiva o pensamento rápido sobre as letras que formam cada vocábulo.<br><br>
-            <strong>2. Mixed Letters</strong><br>
-            O aluno reorganiza letras embaralhadas para formar a palavra correta.<br>
-            Por que é incrível: Treina a memória visual, reforça a ortografia e é uma forma de exercício interativo e desafiador.
-        </p>
+    <div id="lessons-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Life Lessons</h2>
+            <p>Conecte lições à vida real...</p>
+            <img src="../imagens/botoes/matching_game_button.png" alt="Matching Game">
+            <img src="../imagens/botoes/life_lessons_button.png" alt="Life Lessons">
+        </div>
     </div>
-</div>
-
-<!-- Tests Popup -->
-<div id="tests-popup" class="popup">
-    <div class="popup-content">
-        <span class="close">&times;</span>
-        <h2>Tests: Avalie seu progresso</h2>
-        <p>
-            Testes regulares são ferramentas essenciais para avaliar sua compreensão e domínio do material. Eles ajudam a acompanhar seu progresso e identificar áreas que precisam de melhorias.
-        </p>
+    <div id="spelling-tools-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Spelling Tools</h2>
+            <p>Pratique escrita correta...</p>
+            <img src="../imagens/botoes/missing_word_button.png" alt="Missing Words">
+            <img src="../imagens/botoes/mixed_letters_students.png" alt="Mixed Letters">
+        </div>
     </div>
-</div>
+    <div id="tests-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Tests</h2>
+            <p>Avalie seu progresso com testes...</p>
+            <img src="../imagens/botoes/test.png" alt="Test">
+        </div>
+    </div>
 
-    <!-- JavaScript for Pop-up Functionality -->
     <script>
-        // Function to navigate back
         function goBack() {
             window.history.back();
         }
-
-        // Get all topic links
         const topicLinks = document.querySelectorAll('.topic-link');
-
-        // Get all popups
         const popups = document.querySelectorAll('.popup');
-
-        // Get all close buttons
         const closeButtons = document.querySelectorAll('.close');
-
-        // Add click event to each topic link to open corresponding popup
         topicLinks.forEach(link => {
             link.addEventListener('click', (e) => {
                 e.preventDefault();
@@ -330,15 +260,11 @@
                 document.getElementById(popupId).style.display = 'flex';
             });
         });
-
-        // Add click event to each close button to close the popup
         closeButtons.forEach(button => {
             button.addEventListener('click', () => {
                 button.parentElement.parentElement.style.display = 'none';
             });
         });
-
-        // Close popup when clicking outside the content
         window.addEventListener('click', (e) => {
             popups.forEach(popup => {
                 if (e.target === popup) {
